ArticleInfo: prevent date range from overlapping help link in the UI

--- a/assets/css/_rtl.scss
+++ b/assets/css/_rtl.scss
@@ -185,7 +185,7 @@
             text-align: center;
         }
         .date-range {
-            left: 0;
+            left: 30px;
             right: auto;
         }
     }
